Performs elegance on SimpleTokenizer # TODO Perform new modeled Generation Tasks